--- a/test-output/old/Suite/Regression.properties
+++ b/test-output/old/Suite/Regression.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=Simple][SuiteResult context=Regression][SuiteResult context=Functional]
+[SuiteResult context=Simple][SuiteResult context=Regression][SuiteResult context=Functional][SuiteResult context=Group Methods][SuiteResult context=Group of Groups][SuiteResult context=Excluding Test][SuiteResult context=Partial Groups]
